--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -29,5 +29,7 @@ jobs:
         cache: maven
     - name: Build compile with Maven
       run: mvn -B compile --file pom.xml
+    - name: Build test with Maven
+      run: mvn -B test --file pom.xml
     - name: javadoc with Maven
       run: mvn -B javadoc:javadoc --file pom.xml
