--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,13 @@
             <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
-
+	    <dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-engine</artifactId>
+	        <version>5.8.1</version>
+	        <scope>test</scope>
+	    </dependency>
+		
 		<!--
 		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
@@ -50,6 +56,8 @@
 		</dependency>
 
 	</dependencies>
+
+	
 
 	<build>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven
